--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     background-image: linear-gradient(black, rgb(43, 42, 42));
     min-height: 100svh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -35,6 +36,8 @@ body::after{
     align-items: center;
     overflow: hidden;
     transition: all 1s ease-in-out;
+    flex-grow:1;
+    margin: 30px 0;
 }
 
 nav{
@@ -167,4 +170,5 @@ footer h4{
     nav ul li a:active{
         color: red;
     }
+
 }
